fix flex-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ a:hover{
 
 .shell {
   display: flex;
+  flex-wrap: wrap;
   padding: 0;
   margin: 0;
 }
